--- a/packages/fluent-vue/tsconfig.json
+++ b/packages/fluent-vue/tsconfig.json
@@ -10,7 +10,8 @@
     "downlevelIteration": true,
     "outDir": "dist",
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types",
+      "../../node_modules/@types"
     ]
   },
   "baseUrl": "./",
