build: update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,20 @@ notifications:
 node_js:
   - '10'
   - '11'
-script:
-  - npm run test:prod && npm run build
-after_success:
-  - npm run travis-deploy-once "npm run report-coverage"
-  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npm run travis-deploy-once "npm run deploy-docs"; fi
-  - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npm run travis-deploy-once "npm run semantic-release"; fi
+  - '12'
+  - '13'
+jobs:
+  include:
+    - stage: compile
+      script: npx lerna run build
+    - stage: test
+      script: npx lerna run test:prod
+    - stage: deploy
+      node_js: 13
+      script:
+        - npx lerna run report-coverage
+#        - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npx lerna run deploy-docs; fi
+#        - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npx lerna run semantic-release; fi
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
