--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,7 @@
   "packages": [
     "packages/**"
   ],
+  "npmClient": "yarn",
   "command": {
     "publish": {
       "conventionalCommits": true
