--- a/lerna.json
+++ b/lerna.json
@@ -1,12 +1,14 @@
 {
   "packages": [
-    "packages/**"
+    "packages/*",
+    "packages/examples/*"
   ],
   "npmClient": "yarn",
+  "useWorkspaces": true,
+  "version": "independent",
   "command": {
     "publish": {
       "conventionalCommits": true
     }
-  },
-  "version": "0.0.0"
+  }
 }
